RESOLVED FIXED186415
REGRESSION: Cannot listen to audio on Google Translate with side switch set to "vibrate"
https://bugs.webkit.org/show_bug.cgi?id=186415
Summary REGRESSION: Cannot listen to audio on Google Translate with side switch set ...
Jer Noble
Reported 2018-06-07 15:53:13 PDT
REGRESSION: Cannot listen to audio on Google Translate with side switch set to "vibrate"
Attachments
Patch (7.22 KB, patch)
2018-06-07 15:57 PDT, Jer Noble
no flags
Patch (4.42 KB, patch)
2018-06-07 16:20 PDT, Jer Noble
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (3.17 MB, application/zip)
2018-06-07 17:09 PDT, EWS Watchlist
no flags
Patch for landing (6.28 KB, patch)
2018-06-08 14:02 PDT, Jer Noble
commit-queue: commit-queue-
Jer Noble
Comment 1 2018-06-07 15:53:39 PDT
Jer Noble
Comment 2 2018-06-07 15:57:14 PDT
Jer Noble
Comment 3 2018-06-07 16:20:08 PDT
EWS Watchlist
Comment 4 2018-06-07 17:09:23 PDT
Comment on attachment 342218 [details] Patch Attachment 342218 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/8067900 New failing tests: css3/filters/backdrop/add-remove-add-backdrop-filter.html webaudio/audiocontext-state-interrupted.html
EWS Watchlist
Comment 5 2018-06-07 17:09:25 PDT
Created attachment 342223 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Jer Noble
Comment 6 2018-06-08 14:02:46 PDT
Created attachment 342321 [details] Patch for landing
WebKit Commit Bot
Comment 7 2018-06-08 15:56:07 PDT
Comment on attachment 342321 [details] Patch for landing Rejecting attachment 342321 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 342321, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/8090766
Jer Noble
Comment 8 2018-06-08 16:31:08 PDT
Note You need to log in before you can comment on or make changes to this bug.