REGRESSION:  Cannot listen to audio on Google Translate with side switch set to "vibrate" https://bugs.webkit.org/show_bug.cgi?id=186415 <rdar://problem/40584651>

Reviewed by Eric Carlson.

Source/WebCore:

Test: platform/mac/media/audio-session-category-audio-autoplay.html

Make sure that the PlatformMediaSession's state has already been set when calling updateSessionStates().

* platform/audio/PlatformMediaSession.cpp:
(WebCore::PlatformMediaSession::setState):
* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::sessionWillBeginPlayback):
(WebCore::PlatformMediaSessionManager::sessionStateChanged):

LayoutTests:

* platform/mac/media/audio-session-category-audio-autoplay-expected.txt: Added.
* platform/mac/media/audio-session-category-audio-autoplay.html: Added.

Canonical link: https://commits.webkit.org/201812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232650 268f45cc-cd09-0410-ab3c-d52691b4dbfc